<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/baseline_dashboard_black_24dp"
        android:title="@string/BottomNavDashboard" />
    <item
        android:id="@+id/nav_challanges"
        android:icon="@drawable/baseline_whatshot_black_24dp"
        android:title="@string/BottomNavChallange" />
    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/baseline_fitness_center_black_24dp"
        android:title="@string/BottomNavAdd"
        android:visible="false" />
    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/baseline_person_black_24dp"
        android:title="@string/BottomNavAccount" />
</menu>